--- a/covidtracker/track/templates/index.html
+++ b/covidtracker/track/templates/index.html
@@ -2,10 +2,29 @@
 <!DOCTYPE html>
 
 <html lang="en">
+  <head>
+    <link rel="stylesheet" href="{% static 'style/style.css' %}" />
+    <link rel="stylesheet" href="{% static 'style/select_box.css' %}" />
 
-<head>
-  <link rel="stylesheet" href="{% static 'style/style.css' %}" />
-  <link rel="stylesheet" href="{% static 'style/select_box.css' %}" />
+    <title>COVID-19 TRACKER</title>
+  </head>
+  <body>
+    <div class="title">
+      <h1>COVID-19 LIVE NUMBER FOR {{country}}</h1>
+    </div>
+
+    <div class="wrap">
+      <div class="search">
+        <input
+          type="text"
+          class="searchTerm"
+          placeholder="What country are you looking for?"
+        />
+        <button type="submit" value="OK" class="searchButton">
+          <i class="fa fa-search"></i>
+        </button>
+      </div>
+    </div>
 
     <form class="box">
       <select name="drop1">
@@ -35,11 +54,10 @@
         <h3>New cases</h3>
         <p class="small">{{new}}</p>
 
-
-
-  <div class="title">
-    <h1>COVID-19 LIVE NUMBER FOR {{country}}</h1>
-  </div>
+        <div class="go-corner" href="#">
+          <div class="go-arrow">→</div>
+        </div>
+      </a>
 
       <a class="card3" href="#">
         <h3>Critical condition</h3>
@@ -69,4 +87,3 @@
     </div>
   </body>
 </html>
-
