--- a/covidtracker/track/templates/index.html
+++ b/covidtracker/track/templates/index.html
@@ -1,240 +1,70 @@
+{% extends "base.html" %}
 {% load static %}
-<!DOCTYPE html>
+{% block title %}COVID-19 TRACKER{% endblock %}
+{% block stylesheets %}
+<link rel="stylesheet" href="{% static 'style/style.css' %}" />
+<link rel="stylesheet" href="{% static 'style/select_box.css' %}" />
+{% endblock %}
+{% block content %}
+<script type="text/javascript" src = "{% static 'scripts/api_fetch.js'%}" ></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"
+  integrity="sha512-d9xgZrVZpmmQlfonhQUvTR7lMPtO7NkZMkA0ABN3PHCbKA5nqylQ/yWlFAyY6hYgdF1Qh6nYiuADWwKB4C2WSw=="
+  crossorigin="anonymous"></script>
 
-<html lang="en">
-  <script
-    src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"
-    integrity="sha512-d9xgZrVZpmmQlfonhQUvTR7lMPtO7NkZMkA0ABN3PHCbKA5nqylQ/yWlFAyY6hYgdF1Qh6nYiuADWwKB4C2WSw=="
-    crossorigin="anonymous"
-  ></script>
-  <head>
-    <link rel="stylesheet" href="{% static 'style/style.css' %}" />
-    <link rel="stylesheet" href="{% static 'style/select_box.css' %}" />
+<div class="title">
+  <h1 id="title_content">COVID-19 LIVE NUMBER FOR Canada</h1>
+</div>
 
-    <title>COVID-19 TRACKER</title>
-  </head>
-  <div class="title">
-    <h1 id="title_content">COVID-19 LIVE NUMBER FOR Canada</h1>
-  </div>
+<form class="box">
+  <select name="drop1" onchange=drop_down_onchange(),drop_down_onchange_for_plot() id="country_selection">
+    {% for c in country_list %}
+    <option>{{ c|slice:"1:-1" }}</option>
+    {% endfor %}
+  </select>
+</form>
 
-  <form class="box">
-    <select name="drop1" onchange="drop_down_onchange()" id="country_selection">
-      {% for c in country_list %}
-      <option>{{ c|slice:"1:-1" }}</option>
-      {% endfor %}
-    </select>
-  </form>
-
-  <div class="container">
-    <a
-      class="card1"
-      href="https://www.cdc.gov/coronavirus/2019-nCoV/index.html"
-    >
-      <h3>Total Confirmed</h3>
-      <p class="small">Loading...</p>
-      <div class="go-corner" href="#">
-        <div class="go-arrow">→</div>
-      </div>
-    </a>
-
-    <a class="card2" href="#">
-      <h3>Critical</h3>
-      <p class="small">Loading...</p>
-      <div class="go-corner" href="#">
-        <div class="go-arrow">→</div>
-      </div>
-    </a>
-
-    <a class="card3" href="#">
-      <h3>Death</h3>
-      <p class="small">Loading...</p>
-      <div class="dimmer"></div>
-      <div class="go-corner" href="#">
-        <div class="go-arrow">→</div>
-      </div>
-    </a>
-
-    <a class="card4" href="#">
-      <h3>Total Recovered</h3>
-      <p class="small">Loading...</p>
-      <div class="dimmer"></div>
-      <div class="go-corner" href="#">
-        <div class="go-arrow">→</div>
-      </div>
-    </a>
-
-    <!-- <a class="card5" href="#">
-      <h3>Recovered</h3>
-      <p class="small">+100</p>
-      <div class="dimmer"></div>
-      <div class="go-corner" href="#">
-        <div class="go-arrow">→</div>
-      </div>
-    </a> -->
-    <div class="chart">
-      <canvas id="myChart"></canvas>
+<div class="container">
+  <a class="card1" href="https://www.cdc.gov/coronavirus/2019-nCoV/index.html">
+    <h3>Total Confirmed</h3>
+    <p class="small">Loading...</p>
+    <div class="go-corner" href="#">
+      <div class="go-arrow">→</div>
     </div>
+  </a>
+
+  <a class="card2" href="#">
+    <h3>Critical</h3>
+    <p class="small">Loading...</p>
+    <div class="go-corner" href="#">
+      <div class="go-arrow">→</div>
+    </div>
+  </a>
+
+  <a class="card3" href="#">
+    <h3>Death</h3>
+    <p class="small">Loading...</p>
+    <div class="dimmer"></div>
+    <div class="go-corner" href="#">
+      <div class="go-arrow">→</div>
+    </div>
+  </a>
+
+  <a class="card4" href="#">
+    <h3>Total Recovered</h3>
+    <p class="small">Loading...</p>
+    <div class="dimmer"></div>
+    <div class="go-corner" href="#">
+      <div class="go-arrow">→</div>
+    </div>
+  </a>
+
+  <div class="chart">
+    <canvas id="myChart"></canvas>
   </div>
-
-  <body>
-    <script>
-      let total = {};
-      let death = {};
-      const ctx = document.getElementById("myChart").getContext("2d");
-
-      function drop_down_onchange() {
-        let country = document.getElementById("country_selection").value;
-        console.log(country);
-
-        document.getElementById("title_content").innerText =
-          "COVID-19 LIVE NUMBER FOR " + country;
-
-        let cards = document.getElementsByClassName("small");
-        cards[0].innerText = "Loading...";
-        cards[1].innerText = "Loading...";
-        cards[2].innerText = "Loading...";
-        cards[3].innerText = "Loading...";
-
-        country =
-          country === null || country == ">---select a country---"
-            ? fetch_data_by_country("canada")
-            : fetch_data_by_country(country);
-        dates = [];
-
-        for (i = 9; i > 0; i--) {
-          var current_date = new Date();
-          var pastDate = current_date.getDate() - i;
-          current_date.setDate(pastDate);
-          dates.push(current_date.toISOString().split("T")[0]);
-        }
-        console.log(dates);
-        /*dates.forEach((date) => {
-          console.log(date);
-          country = document.getElementById("country_selection").value;
-          country =
-            country === null || country == ">---select a country---"
-              ? fetch_data_by_country_date("canada", date)
-              : fetch_data_by_country_date(country, date);
-        });*/
-        country = document.getElementById("country_selection").value;
-        country =
-          country === null || country == ">---select a country---"
-            ? fetch_data_by_country_date("Canada", dates)
-            : fetch_data_by_country_date(country, dates);
-      }
-      function fetch_data_by_country(country) {
-        fetch(
-          "https://covid-193.p.rapidapi.com/statistics?country=" + country,
-          {
-            method: "GET",
-            headers: {
-              "x-rapidapi-key":
-                "cf0cc6c39fmsh6978155cd15ca71p1c62bajsn4453d836d5f9",
-              "x-rapidapi-host": "covid-193.p.rapidapi.com",
-            },
-          }
-        ).then((response) => {
-          response
-            .json()
-            .then((data) => {
-              //console.log(data.response);
-              test = data;
-              let cards = document.getElementsByClassName("small");
-              cards[0].innerText = data.response[0].cases.total
-                ? data.response[0].cases.total
-                : 0;
-              cards[1].innerText = data.response[0].cases.critical
-                ? data.response[0].cases.critical
-                : 0;
-              cards[2].innerText = data.response[0].deaths.total
-                ? data.response[0].deaths.total
-                : 0;
-              cards[3].innerText = data.response[0].cases.recovered
-                ? data.response[0].cases.recovered
-                : 0;
-            })
-            .catch((err) => {
-              console.error(err);
-            });
-        });
-      }
-      function fetch_data_by_country_date(country, dates) {
-        console.log(country, dates);
-        total = {};
-        const fetch1 = async (country, date) => {
-          await fetch(
-            "https://covid-193.p.rapidapi.com/history?country=" +
-              country +
-              "&day=" +
-              date,
-            {
-              method: "GET",
-              redirect: "follow",
-              headers: {
-                "x-rapidapi-key":
-                  "1e2f4f94dbmsh9fc0dcd6b9a82fap1516edjsn402832e9ca33",
-                "x-rapidapi-host": "covid-193.p.rapidapi.com",
-              },
-            }
-          ).then((response) => {
-            response.json().then((data) => {
-              console.log(data);
-              total[date] = data["response"][0]["cases"]["new"];
-              death[date] = data["response"][0]["deaths"]["new"];
-              plot();
-            });
-          });
-        };
-        dates.forEach((date) => {
-          fetch1(country, date);
-          console.log(total);
-        });
-      }
-
-      let my_chart;
-
-      function plot() {
-        if (my_chart) {
-          my_chart.destroy();
-        }
-        console.log(Object.keys(total));
-        my_chart = new Chart(ctx, {
-          type: "bar",
-          data: {
-            datasets: [
-              {
-                label: "New cases",
-                data: Object.values(total),
-                borderColor: "#FFF",
-                backgroundColor: "#FFF",
-                borderWidth: 1,
-              },
-              {
-                label: "New Death",
-                data: Object.values(death),
-                borderColor: "#f44336",
-                backgroundColor: "#f44336",
-                borderWidth: 1,
-              },
-            ],
-            labels: Object.keys(total),
-          },
-          options: {
-            title: {
-              display: true,
-              text: "new cases in the last 9 days",
-              position: "right",
-            },
-            responsive: true,
-            maintainAspectRation: false,
-          },
-        });
-      }
-    </script>
-
-    <script>
-      document.getElementById("country_selection").value = "Canada";
-      drop_down_onchange();
-    </script>
-  </body>
-</html>
+</div>
+<script>
+  document.getElementById("country_selection").value = "Canada";
+  drop_down_onchange();
+  drop_down_onchange_for_plot();
+</script>
+{% endblock %}
